# cloud-incident-texts

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: secret_scanning.yml
.github/workflows/: cloudflare-pages.yml  crawl.yml  deploy-site.yml  pr-preview.yml
data/: changelog.jsonl  crawl_summary.json  incidents.json  mitre_attack_cloud.json  monitor_state.json
data/analysis/2020-eye-care-network-and-hearing-care-network-2021-january/: attack_analysis.json
data/analysis/angelone-2025-march/: attack_analysis.json
data/analysis/animal-jam-2020-november/: attack_analysis.json
data/analysis/aws-2023-august/: attack_analysis.json
data/analysis/aws-2023-february/: attack_analysis.json
data/analysis/aws-cirt-2024-january/: attack_analysis.json
data/analysis/badshah-2025-april/: attack_analysis.json
data/analysis/beyondtrust-2024-december/: attack_analysis.json
data/analysis/browserstack-2014-november/: attack_analysis.json
data/analysis/bybit-safewallet-2025-february/: attack_analysis.json
data/analysis/cado-security-and-invictus-incident-response-2023-january/: attack_analysis.json
data/analysis/cameo-2020-february/: attack_analysis.json
scripts/: analyze.py  backfill_clean.py  build_site_data.py  clean.py  crawl.py  extract.py  fetch_attack_data.py  fix_ttps.py  monitor.py  normalize.py  parse_readme.py  run_iterative_pipeline.py  sources.py
site/: astro.config.mjs  package-lock.json  package.json
tests/: test_backfill_clean.py  test_clean.py  test_extract.py  test_fix_ttps.py  test_normalize.py  test_sources.py
(+682 files in other folders)
